@@ -1,4 +1,4 @@
-% my $msg = $exception->message // '500: Internal Server Error';
+% my $msg = stash('msg') // stash('exception')->message // '500: Internal Server Error';
 % layout 'main', title => 'KorAP: ' . $msg;
 
 <p class="no-results"><%= $msg  %></p>
